
Absences et remplacements de professeurs
- Ajout d'un module de saisie d'absences de professeurs avec possibilité de proposer des remplacements aux professeurs qui n'ont pas cours sur un créneau libéré.

Edt:
- Dispositif d'import de fichiers ICAL/ICS pour remplir un Emploi du temps dans Gepi
  (dispositif alternatif, non lié à l'EDT classique de Gepi).

Discipline:
- Affichage d'un témoin d'incident/sanctions pour les élèves/parents.
- Possibilité d'afficher un témoin pour les incidents dans la page d'accueil en compte personnel de l'établissement.

Gestion:
- Accès au dossier d'export des absences de mod_abs2 en fin d'année (dans Sauvegarde et restauration).
- Possibilité de préciser la salle pour les événements classe.

Engagements:
- Ajout d'un module engagements (délégué de classe, membre du C.A.,...)

Années antérieures:
- Possibilité de générer un SQL des insertions lors de l'archivage.

Livret Scolaire Lycée:
- Ajout d'une ébauche de module.


Gepi-1.6.5 (14/06/2014)
===========================
Cahier de textes:
- Possibilité de définir en administrateur des URL absolues à corriger en URL relatives pour les documents joints aux cahiers de textes.

Cahier de notes:
- Possibilité de choisir la hauteur de ligne dans l'export PDF de toutes les moyennes de la classe.
- Relevés de notes: Dans le choix dates/périodes, affichage des dates de 1ère et dernière évaluation dans chaque période pour chacune des classes sélectionnées.

Bulletins:
- Possibilité de choisir la hauteur de ligne dans l'export PDF de toutes les moyennes de la classe.
- Possibilité de donner le droit aux comptes scolarité de corriger des appréciations
  (avec envoi de mail de compte-rendu de modification).
- Possibilité de donner le droit aux professeurs d'autoriser (via Gérer mon compte) tel ou tel professeur principal à corriger leurs appréciations
  (avec envoi de mail de compte-rendu de modification).

EDT: 
- Facilités de navigation Classe/Prof/Salle en cliquant dans le créneau affiché.
