@@ -1262,3 +1262,4 @@ INSERT INTO droits SET id='/edt_organisation/import_edt_edt.php', administrateur
 INSERT INTO droits SET id='/mod_engagements/extraction_engagements.php', administrateur='V', professeur='F', cpe='V', scolarite='V', eleve='F', responsable='F', secours='F', autre='F', description='Extraction des engagements', statut='';
 INSERT INTO droits SET id='/cahier_texte_2/ajax_affichage_car_spec.php', administrateur='F', professeur='V', cpe='F', scolarite='F', eleve='F', responsable='F', secours='F', autre='F', description='CDT2: Caractères spéciaux à insérer', statut='';
 INSERT INTO droits SET id='/cahier_texte_2/cdt_choix_caracteres.php', administrateur='F', professeur='V', cpe='F', scolarite='F', eleve='F', responsable='F', secours='F', autre='F', description='Choix de caractères spéciaux pour le CDT2', statut='';
+INSERT INTO droits SET id='/groupes/maj_inscript_ele_d_apres_edt.php', administrateur='V', professeur='F', cpe='F', scolarite='F', eleve='F', responsable='F', secours='F', autre='F', description='Import des inscriptions élèves depuis un XML EDT', statut='';
