@@ -1318,6 +1318,18 @@ autre='F',
 description='CDT2: Caractères spéciaux à insérer',
 statut='';";
 
+$tab_req[] = "INSERT INTO droits SET id='/groupes/maj_inscript_ele_d_apres_edt.php',
+administrateur='V',
+professeur='F',
+cpe='F',
+scolarite='F',
+eleve='F',
+responsable='F',
+secours='F',
+autre='F',
+description='Import des inscriptions élèves depuis un XML EDT',
+statut='';";
+
 //$tab_req[] = "";
 
 $test1 = mysqli_num_rows(mysqli_query($GLOBALS["mysqli"], "SHOW COLUMNS FROM droits LIKE 'responsable'"));
